# spec

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  README.template.md  docker-compose.yml  install.sh  install.sh.template  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: workflows.md
.claude/commands/: README.md  adapt.md  upgrade.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
.mise-tasks/: install-claude-plugins  publish-rc  publish-templates  publish-templates-rc  registry-login  scaffold  template-utils  upgrade  upversion  utils
.style/: REVIEW.md  compliance.json  config.json
docs/: architecture.md  development-guide.md  development-guide.template.md  infrastructure.md  infrastructure.template.md  user-guide.md
src/: sample-code.txt
src/spec/: __init__.py  __main__.py
src/spec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/: README.md
templates/uv/: .releaserc.json  CLAUDE.md.append  mise.toml  pyproject.toml
templates/uv/docs/: development-guide.template.md
templates/uv/src/mise_lib_template/: __init__.py  __main__.py  sample.py
templates/uv/tests/: test_sample.py
templates/zig/: .releaserc.json  CLAUDE.md.append  build.zig  build.zig.zon  install.sh.template  mise.toml
test/: docker.bats  sample-test.txt  scaffold-templates.bats  scaffold.bats  template-export.bats
test/helpers/: contract.bash
tests/: test_sample.py
(+6 files in other folders)
